--- a/src/App.css
+++ b/src/App.css
@@ -81,13 +81,6 @@ font-size: 20px;
 }
 
 /*/////////////////////////////////////////////////////////////////*/
-/* .home{
-background-image: url(../public//pexels-frank-cone-140140-3607542.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-padding-top: 130px;
-height: 100vh;
-} */
 .right{
   min-height: 400px;
   text-align: center;
@@ -97,20 +90,21 @@ height: 100vh;
   height: 90% ; 
   width:80%;
   position: absolute;
-  left: 50%;             
-  transform: translateX(-50%);
+  left: 50%;   
+  top: 50%;          
+  transform: translateX(-50%,-55%);
   animation-name: move;
-  animation-duration: 2s;   
+  animation-duration: 1s;   
   animation-iteration-count: infinite;
   animation-direction: alternate; 
 }
-@keyframes move{
-  0%{bottom: 0;}
-  100%{bottom: 10%;}
+@keyframes move {
+  0%   { transform: translate(-50%, -55%); }
+  100% { transform: translate(-50%, -45%); }
 }
 .left{
   position: relative;
-  min-height: 450px;
+  min-height: 250px;
 }
 .inside{
   width:75% ;
@@ -339,6 +333,11 @@ height: 100vh;
   padding-right: 60px;
 }
 
+.circle-wrapper {
+    width: 120px;
+    height: 120px;
+    margin: auto;
+  }
 
 
 
@@ -379,6 +378,9 @@ h2 {
     padding: 0;
     padding-left: 30px;
   }
+  .skills{
+    height: 60vh;
+  }
 }
 /* للشاشات الصغيرة (أقل من 576px) */
 @media (max-width: 576px) {
@@ -390,8 +392,8 @@ h2 {
   }
   
   .home{
-    height: auto;
-    padding-top: 30px;
+    min-height: 500px;
+    padding-top:0px;
   }
   .icons button{
     margin-top: 10px;
@@ -410,5 +412,7 @@ h2 {
     padding: 0;
     padding-left: 30px;
   }
-  
+  .skills{
+    height: 60vh;
+  }
 }
